<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/brand_header_log_in_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/content_description_login"
        app:srcCompat="@drawable/kucharz_login" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signp_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup_btn_final"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>