<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/brand_header_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/content_description_welcome"
        app:srcCompat="@drawable/kucharz" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup_btn_final"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/ttt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:text="Losowy cytat:"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>